--- a/module1-ux-design/index.html
+++ b/module1-ux-design/index.html
@@ -2,8 +2,11 @@
 <html lang="en">
 
 <head>
+<!-- meta -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="The Larder Cafe">
+    <meta name="keywords" content="larder, coffee, food, Miramar,">
     <!--Import Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!-- Compiled and minified CSS -->
@@ -14,7 +17,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Bree+Serif&family=Pacifico&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/d6a8ce8d77.js" crossorigin="anonymous"></script>
     <!-- Project Title -->
-    <title>The Larder Cafe</title>
+    <title>The Larder</title>
 </head>
 
 <body>
@@ -47,6 +50,7 @@
                 <img src="https://cdn.pixabay.com/photo/2017/07/31/19/27/coffee-2560260_1280.jpg" alt="">
                 <div class="caption center-align white-text ">
                     <h3>The Larder</h3>
+                    <!-- First slide-->
                     <h5 class="light text-lighten-3">All things to all people.</h5>
                 </div>
             </li>
@@ -54,6 +58,7 @@
                 <img src="https://cdn.pixabay.com/photo/2015/09/01/21/00/coffee-917613_1280.jpg" alt="">
                 <div class="caption center-align white-text">
                     <h3>The Larder Cafe</h3>
+                    <!-- Second slide -->
                     <h5 class="light text-lighten-3">Come and connect over coffee & great food.</h5>
                 </div>
             </li>
@@ -95,6 +100,7 @@
                     <span class="card-title activator white-text" style="font-weight: 500;">Americano<i
                             class="material-icons right">more_vert</i></span>
                 </div>
+                <!-- Americano price & info reveal-->
                 <div class="card-reveal">
                     <span class="card-title grey-text text-darken-4"
                         style="font-size: 2rem; font-weight: 500;">Americano<i
@@ -115,6 +121,7 @@
                     <span class="card-title activator white-text" style="font-weight: 500;">Cappuccino<i
                             class="material-icons right">more_vert</i></span>
                 </div>
+                <!-- Cappuccino price & info reveal-->
                 <div class="card-reveal">
                     <span class="card-title grey-text text-darken-4"
                         style="font-size: 2rem; font-weight: 500;">Cappuccino<i
@@ -136,6 +143,7 @@
                     <span class="card-title activator white-text" style="font-weight: 500;">Latte<i
                             class="material-icons right">more_vert</i></span>
                 </div>
+                <!-- Latte price & info reveal -->
                 <div class="card-reveal">
                     <span class="card-title grey-text text-darken-4" style="font-size: 2rem; font-weight: 500;">Fresh
                         Latte<i class="material-icons right">close</i></span>
@@ -158,6 +166,7 @@
                     <span class="card-title activator white-text" style="font-weight: 500;">Mocha<i
                             class="material-icons right">more_vert</i></span>
                 </div>
+                <!-- Mocha price & content reveal -->
                 <div class="card-reveal">
                     <span class="card-title grey-text text-darken-4" style="font-size: 2rem; font-weight: 500;">Mocha<i
                             class="material-icons right">close</i></span>
@@ -178,6 +187,7 @@
                     <span class="card-title activator white-text text-darken-4" style="font-weight: 500;">Expresso<i
                             class="material-icons right">more_vert</i></span>
                 </div>
+                <!-- Expresso price & content reveal -->
                 <div class="card-reveal">
                     <span class="card-title grey-text" style="font-size: 2rem; font-weight: 500;">Expresso<i
                             class="material-icons right">close</i></span>
@@ -199,6 +209,7 @@
                     <span class="card-title activator white-text" style="font-weight: 500;">Double Shot
                         Expresso<i class="material-icons right">more_vert</i></span>
                 </div>
+                <!-- Double shot price & info reveal -->
                 <div class="card-reveal">
                     <span class="card-title grey-text text-darken-4" style="font-size: 2rem; font-weight: 500;">Double
                         Shot Expresso<i class="material-icons right">close</i></span>
@@ -236,7 +247,7 @@
                 <button class="addtocart">Add To Cart</button>
             </div>
         </div>
-        <!-- cart container/content-->
+        <!-- Cart container/content -->
         <div class="cart-container">
             <h5>Cart</h5>
             <table>
@@ -257,7 +268,7 @@
                 </tr>
                 <tr>
                     <td>x <span id="itemsquantity">0</span></td>
-
+<!-- Total price-->
                     <td>$<span id="total">0</span></td>
                 </tr>
             </table>
@@ -304,9 +315,10 @@
             <i class="material-icons large cyan-text text-darken-3">watch_later</i>
             <h5 class="header">Tues-Sat 8-2:30pm</h5>
         </div>
+        <!-- welcoming content -->
         <div class="col s12 l4 center" style="padding: 50px;">
             <i class="material-icons large cyan-text text-darken-3">favorite</i>
-            <h5 class="header">Variety of Coffee & Tea</h5>
+            <h5 class="header">Connect over coffee & good food</h5>
         </div>
     </div>
     <!-- Customer review section begins-->
@@ -321,6 +333,7 @@
                 <div class="row">
                     <div class="col s12">
                         <div class="card panel orange darken-2">
+                            <!-- review -->
                             <span class="white-text">One Review</span>
                             <p class="white-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                                 Nulla iste iusto doloribus sint excepturi assumenda ea cum veniam quibusdam
@@ -334,6 +347,7 @@
                 <div class="row">
                     <div class="col s12">
                         <div class="card panel orange darken-2">
+                            <!-- review -->
                             <span class="white-text">One Review</span>
                             <p class="white-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                                 Nulla iste iusto doloribus sint excepturi assumenda ea cum veniam quibusdam
@@ -347,6 +361,7 @@
                 <div class="row">
                     <div class="col s12">
                         <div class="card panel orange darken-2">
+                            <!-- review -->
                             <span class="white-text">One Review</span>
                             <p class="white-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                                 Nulla iste iusto doloribus sint excepturi assumenda ea cum veniam quibusdam
@@ -360,6 +375,7 @@
                 <div class="row">
                     <div class="col s12">
                         <div class="card panel orange darken-2">
+                            <!-- review -->
                             <span class="white-text">One Review</span>
                             <p class="white-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                                 Nulla iste iusto doloribus sint excepturi assumenda ea cum veniam quibusdam
@@ -373,6 +389,7 @@
                 <div class="row">
                     <div class="col s12">
                         <div class="card panel orange darken-2">
+                            <!-- review -->
                             <span class="white-text">One Review</span>
                             <p class="white-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                                 Nulla iste iusto doloribus sint excepturi assumenda ea cum veniam quibusdam
@@ -386,6 +403,7 @@
                 <div class="row">
                     <div class="col s12">
                         <div class="card panel orange darken-2">
+                            <!-- review -->
                             <span class="white-text">One Review</span>
                             <p class="white-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                                 Nulla iste iusto doloribus sint excepturi assumenda ea cum veniam quibusdam
@@ -399,6 +417,7 @@
                 <div class="row">
                     <div class="col s12">
                         <div class="card panel orange darken-2">
+                            <!-- review -->
                             <span class="white-text">One Review</span>
                             <p class="white-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                                 Nulla iste iusto doloribus sint excepturi assumenda ea cum veniam quibusdam
@@ -447,6 +466,7 @@
         <div class="row orange darken-2">
             <div class="col l6 s12">
                 <p class="white-text">
+                    <!-- copyright-->
                     <a href="#">&copy; The Larder</a>
                 </p>
             </div>
