--- a/module1-ux-design/index.html
+++ b/module1-ux-design/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-<!-- meta -->
+    <!-- meta -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="The Larder Cafe">
@@ -67,12 +67,14 @@
     <!-- side nav bar ends -->
     <!-- The larder statement/history -->
     <div class="section white center">
-        <h2 class="header">The Larder</h2>
+        <h2 class="header">The Larder History</h2>
         <div class="row container">
             <div class="col l8 s12 center-align move">
                 The larder is a place where historically people used to keep food in the coldest room in the house.
-                In New Zealand it was south facing. The building that The Larder cafe is located in, used to be an old home
-                and it happens to face south. It seemed to fit because it's a place where you go and get food. The sister business, Myrtle Bakery,
+                In New Zealand it was south facing. The building that The Larder cafe is located in, used to be an old
+                home
+                and it happens to face south. It seemed to fit because it's a place where you go and get food. The
+                sister business, Myrtle Bakery,
                 provides delicious bakery goods at The Larder too.
             </div>
             <div class="col l4 s12 center">
@@ -145,7 +147,7 @@
                 </div>
                 <!-- Latte price & info reveal -->
                 <div class="card-reveal">
-                    <span class="card-title grey-text text-darken-4" style="font-size: 2rem; font-weight: 500;">Fresh
+                    <span class="card-title grey-text text-darken-4" style="font-size: 2rem; font-weight: 500;">
                         Latte<i class="material-icons right">close</i></span>
                     <p>Drink it in any flavor, lattes are known for decreasing the risk of type 2 diabetes.
                         A cup of latte in moderation helps in preventing cardiovascular disorders and aid in burning fat
@@ -268,7 +270,7 @@
                 </tr>
                 <tr>
                     <td>x <span id="itemsquantity">0</span></td>
-<!-- Total price-->
+                    <!-- Total price-->
                     <td>$<span id="total">0</span></td>
                 </tr>
             </table>
@@ -301,7 +303,7 @@
                 The menu therefore is produce-driven and directly reflective of the seasons. Jacob and Sarah believe
                 strongly in the philosophy of 'nose to tail eating' where all the parts of the
                 animal are utilised and honoured.</p>
-            <a href="#" class="btn waves-effect waves-light cyan darken-2">Read More</a>
+            <a href="#" class="btn waves-effect waves-light cyan darken-2">Back to top</a>
         </div>
     </div>
     <!-- Local Dining content-->
@@ -313,7 +315,7 @@
         <!-- Opening hours content-->
         <div class="col s12 l4 center" style="padding: 50px;">
             <i class="material-icons large cyan-text text-darken-3">watch_later</i>
-            <h5 class="header">Tues-Sat 8-2:30pm</h5>
+            <h5 class="header">Tues-Sat 8am-2:30pm</h5>
         </div>
         <!-- welcoming content -->
         <div class="col s12 l4 center" style="padding: 50px;">
